--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "MIT",
   "devDependencies": {
     "aws-sdk": "^2.2.17",
+    "broccoli-clean-css": "^1.1.0",
     "broccoli-static-compiler": "^0.2.2",
+    "broccoli-uglify-js": "^0.1.3",
     "jsdom": "^3.1.2",
     "markdown-to-json": "^0.4.2",
     "node-rss": "^1.0.5",
