--- a/package.json
+++ b/package.json
@@ -1,36 +1,30 @@
 {
   "name": "static_blog",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "bloggggggggggggggg",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf dist && broccoli build dist && node devserver.js"
+    "build": "rollup -c"
   },
   "author": "Yamaguchi Eikichi",
   "license": "MIT",
   "devDependencies": {
     "aws-sdk": "^2.2.17",
-    "broccoli-clean-css": "^1.1.0",
-    "broccoli-static-compiler": "^0.2.2",
-    "broccoli-uglify-js": "^0.1.3",
+    "babel-preset-es2015-rollup": "^1.2.0",
     "jsdom": "^3.1.2",
     "markdown-to-json": "^0.4.2",
     "node-rss": "^1.0.5",
-    "request": "^2.65.0"
+    "request": "^2.65.0",
+    "rollup": "^0.36.4",
+    "rollup-plugin-babel": "^2.6.1",
+    "rollup-plugin-commonjs": "^5.0.5",
+    "rollup-plugin-node-resolve": "^2.0.0",
+    "rollup-plugin-riot": "^1.0.0"
   },
   "dependencies": {
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.16.0",
-    "broccoli": "^0.16.9",
-    "broccoli-babel-transpiler": "^5.5.0",
-    "broccoli-browserify": "^0.1.0",
-    "broccoli-funnel": "^1.0.1",
-    "broccoli-jade": "^1.1.0",
-    "broccoli-merge-trees": "^1.0.0",
-    "broccoli-stylus-single": "^0.4.1",
-    "browser-sync": "^2.10.0",
     "mson2json": "^1.0.7",
+    "riot": "^3.0.1",
     "stylus": "^0.52.4"
   }
 }
